--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { ClientRouter } from "astro:transitions";
 import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
@@ -21,6 +22,7 @@ import Footer from "../components/Footer.astro";
         />
     </head>
     <body>
+        <Header />
         <slot />
         <Footer />
     </body>
