--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,5 +1,5 @@
 ---
-import Header from "../components/Header.astro";
+// import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 
 const allSeries = Object.values(
@@ -15,7 +15,7 @@ const text =
 ---
 
 <Layout>
-    <Header />
+    <!-- <Header /> -->
     <div class="posts-list">
         <span class="text">{text}</span>
         {
