--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,11 @@ import Header from "../components/Header.astro";
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
+        <script
+            defer
+            is:inline
+            src="https://cloud.umami.is/script.js"
+            data-website-id="5d4d1d04-96de-428a-9fdf-364a81b64f9b"></script>
         <title>Noah Syrkis</title>
         <link
             href="https://fonts.cdnfonts.com/css/libertinus-serif"
