--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,29 +3,31 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <div class="text" style="text-align: justify; text-align-last: center;">
-        <p>
-            Noah Syrkis's work explores the aesthetics of archives and
-            mathematics, along with variations on geospatial and organic themes.
-            Working across Copenhagen, Rio de Janeiro, and New York, Noah
-            develops systems that translate complex and often stochastic
-            processes into visual and physical form. His work occupies a space
-            between structure and decay.
-        </p><p>
-            As an artificial intelligence researcher and through his work at <a
-                href="https://virian.org"
-                target="_blank"><i>Virian</i></a
-            >, Noah studies complex domains by computational means. From command
-            and control systems to cultural geometry, his work investigates how
-            patterns evolve and dissolve in both artificial and organic systems,
-            employing, among other techniques, mechanistic interpretability and
-            geometric deep learning.
-        </p>
+    <div class="text">
+        Noah Syrkis's work explores the aesthetics of archives and mathematics,
+        along with variations on geospatial and organic themes. Working across
+        Copenhagen, Rio de Janeiro, and New York, Noah develops systems that
+        translate complex and often stochastic processes into visual and
+        physical form. His work occupies a space between structure and decay. As
+        an artificial intelligence researcher for the Swiss Armed Forces, and
+        through his work at <a href="https://virian.org" target="_blank"
+            ><i>the Virian Project</i></a
+        >, Noah studies complex domains by computational means. From command and
+        control systems to cultural geometry, his work investigates how patterns
+        evolve and dissolve in both synthetic and organic systems, employing,
+        among other techniques, mechanistic interpretability and geometric deep
+        learning.
     </div>
 </Layout>
 
 <style>
     .text {
         padding: 10vh 0;
+        margin: auto;
+        width: 90%;
+        max-width: 700px;
+        text-align: justify;
+        text-justify: inter-word;
+        text-align-last: center;
     }
 </style>
