--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,65 +2,32 @@
 const isRoot = Astro.url.pathname === "/";
 ---
 
-<header transition:name="header" class={`header ${isRoot ? "root" : ""}`}>
-    <nav>
-        <ul>
-            <li><a href="/works">works</a></li>
-            <li class="separator"><a href="/">|</a></li>
-            <li><a href="/about">about</a></li>
-        </ul>
-    </nav>
-</header>
+{
+    (
+        <div class={`${isRoot ? "root" : ""}`}>
+            <header transition:name="headers">
+                <a href="/works">works</a>
+                <a href="/">|</a>
+                <a href="/about">about</a>
+            </header>
+        </div>
+    )
+}
 
 <style>
-    header.header.root {
-        padding-top: 42vh;
-    }
-    header.header {
-        padding-top: 5vh;
-    }
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-    }
-
-    li {
-        display: inline-block;
-        padding: 0.5em;
-    }
-
-    a {
-        color: inherit;
-        text-decoration: none;
-    }
-
-    .separator {
-        color: inherit;
+    .root {
+        padding-top: 50vh;
     }
 
     header {
-        text-align: center;
-        padding: 2rem 0;
-        font-size: clamp(1.5rem, 3vw, 1.5em);
-        letter-spacing: 0.4em;
-    }
-
-    @media (max-width: 768px) {
-        header {
-            padding: 1rem 0;
-            letter-spacing: 0.2em;
-        }
-
-        ul {
-            gap: 0.5rem;
-        }
-
-        li {
-            padding: 0.3em;
-        }
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1em 0;
+        font-size: 1.7em;
+        width: 400px;
+        letter-spacing: 0.1em;
+        max-width: 90%;
+        margin: auto;
     }
 </style>
