--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,14 @@ import "../assets/global.css";
             type="text/css"
             charset="utf-8"
         />
-        <ClientRouter />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@4/distr/fira_code.css"
+        />
+        <script
+            defer
+            src="https://cloud.umami.is/script.js"
+            data-website-id="5d4d1d04-96de-428a-9fdf-364a81b64f9b"></script>
     </head>
     <body class={Astro.props.pageType}>
         <Header />
