--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,7 @@ import "../assets/global.css";
             src="https://cloud.umami.is/script.js"
             data-website-id="5d4d1d04-96de-428a-9fdf-364a81b64f9b"></script>
     </head>
+    <ClientRouter />
     <body class={Astro.props.pageType}>
         <Header />
         <slot />
